--- a/setting_up_an_API_for_sentiment_analysis.ipynb
+++ b/setting_up_an_API_for_sentiment_analysis.ipynb
@@ -18,7 +18,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AIzaSyAOTwcy2AZFh6EnRrQIcesp2Wa913u7X2Y\n"
+      "'Api code here'\n"
      ]
     }
    ],
